feat: change meta whole app

--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -35,7 +35,7 @@ const { mail, address, tel, name } = metadata;
 					/>
 				</div>
 				<a
-					href="mailto:elrostidorarenysdemunt@gmail.com?Subject='Interesado%20en%20contratar"
+					href=`mailto:${mail}?Subject='Interesado%20en%20contratar'`
 					>{mail}</a
 				>
 			</div>
