--- a/src/pages/politica-de-privacidad.astro
+++ b/src/pages/politica-de-privacidad.astro
@@ -1,5 +1,8 @@
 ---
 import LayoutPages from "@/layouts/LayoutPages.astro";
+
+import metadata from "../const/meta.json";
+const { mail, address, tel, name } = metadata;
 ---
 
 <LayoutPages
@@ -13,22 +16,21 @@ import LayoutPages from "@/layouts/LayoutPages.astro";
 	</h1>
 	<h2 class="text-2xl font-semibold my-10 text-center">
 		Para cualquier consulta legal, contáctenos por <a
-			href="mailto:elrostidorarenysdemunt@gmail.com?Subject=Interesado%20en%20contratar"
-			>elrostidorarenysdemunt@gmail.com</a
+			href=`mailto:${mail}?Subject='Interesado%20en%20contratar'`
+			>{mail}</a
 		>
 	</h2>
 	<div class="mb-7">
 		<p>
 			La presente Política de Privacidad regula el uso del servicio del
-			portal de Internet con dirección www.assessorstecnics.com, cuyo
+			portal de Internet con dirección www.arquitectesassessors.com, cuyo
 			responsable a efectos identificativos es:
 		</p>
 		<ul class="list-disc px-4">
-			<li>Responsable: ASSESSORS TECNICS</li>
-			<li>NIF: B09680885</li>
-			<li>Dirección: CARRER BELLSOLAR, 85, ESC 1 – LOCAL 2</li>
-			<li>Teléfono: 690381591</li>
-			<li>MAIL: elrostidorarenysdemunt@gmail.com</li>
+			<li>Responsable: {name}</li>
+			<li>Dirección: {address}</li>
+			<li>Teléfono: {tel}</li>
+			<li>MAIL: {mail}</li>
 		</ul>
 	</div>
 	<div class="mb-7">
@@ -143,8 +145,7 @@ import LayoutPages from "@/layouts/LayoutPages.astro";
 		<p>
 			La persona interesada puede ejercitar sus derechos dirigiendo un
 			correo electrónico a la dirección de correo electrónico
-			gestion@kibanprojects.com, o en su caso a la dirección física Carrer
-			Bellsolar, 85, Esc 1 – Local 2.
+			{mail}, o en su caso a la dirección física {address}.
 		</p>
 	</div>
 	<div class="mb-7">
