fix: fixing footer and contact styles

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,15 @@
-<footer class="md:flex bg-contrast text-white p-4">
+<footer class="flex bg-contrast text-white p-4">
 	<nav class="container mx-auto">
-		<ul class="flex flex-col md:flex-row md:justify-center md:items-center">
-			<li class="md:mr-2">
+		<ul class="flex flex-row flex-wrap justify-center items-center">
+			<li>
 				<a href="/aviso-legal">Aviso legal</a>
 			</li>
-			<li class="md:mr-2">
+			<span class="mx-4">|</span>
+			<li>
 				<a href="/politica-de-privacidad">Politica de privacidad</a>
 			</li>
-			<li class="md:mr-2">
+			<span class="mx-4">|</span>
+			<li>
 				<a href="/politica-de-cookies">Politica de cookies</a>
 			</li>
 		</ul>
