feat: new arrangement and copy

--- a/src/components/Info.astro
+++ b/src/components/Info.astro
@@ -4,7 +4,7 @@ import { Image } from "astro:assets";
 ---
 
 <Section bgColor="bg-gray-200" textColor="text-black">
-	<h2 class="mb-7 md:my-4 text-2xl ">CATEGORIAS DE OBRAS</h2>
+	<h2 class="mb-7 md:my-4 text-2xl">CATEGORIAS DE OBRAS</h2>
 
 	<div
 		class="grid grid-cols-1 gap-y-4 md:grid-cols-3 md:grid-rows-1 md:gap-x-4 mb-4"
@@ -13,20 +13,19 @@ import { Image } from "astro:assets";
 			class="bg-gray-100 p-3 rounded-lg shadow-2xl hover:scale-105 transform ease-in-out duration-300"
 		>
 			<Image
-				src="/images/icon1.png"
+				src="/images/icon7.png"
 				alt="Untitled design"
 				class="md:hidden"
-				width={50}
-				height={50}
+				width={70}
+				height={70}
 			/>
 			<div class="text-left">
 				<a href="/servicios/" tabindex="0">
 					<h3 class="text-1xl font-semibold">
-						Estilo de proyectos
+						Reparación de Fachadas
 					</h3><p>
-						Transformar espacios existentes en ambientes
-						funcionales, adaptados a las necesidades de los
-						clientes.
+						Restablecemos la integridad y estética de su fachada con
+						técnicas ampliamente avanzadas y duraderas.
 					</p>
 				</a>
 			</div>
@@ -35,19 +34,63 @@ import { Image } from "astro:assets";
 			class="bg-gray-100 p-3 rounded-lg shadow-2xl hover:scale-105 transform ease-in-out duration-300"
 		>
 			<Image
-				src="/images/icon2.png"
+				src="/images/icon6.png"
 				alt="Untitled design"
 				class="md:hidden"
-				width={50}
-				height={50}
+				width={70}
+				height={70}
 			/>
 			<div class="text-left">
 				<a href="/servicios/" tabindex="0">
 					<h3 class="text-1xl font-semibold">
-						Diseño de Interiores
+						Procesos de Impermeabilización
 					</h3><p>
-						Optimizar los espacios al aire libre, creando entornos
-						armoniosos, atractivos y completamente funcionales..
+						Protegemos su estructura contra filtraciones y humedad
+						mediante impermeabilizaciones efectivas y de calidad.
+					</p>
+				</a>
+			</div>
+		</div>
+		<div
+			class="bg-gray-100 p-3 rounded-lg shadow-2xl hover:scale-105 transform ease-in-out duration-300"
+		>
+			<Image
+				src="/images/icon5.png"
+				alt="Untitled design"
+				class="md:hidden"
+				width={70}
+				height={70}
+			/>
+			<div class="text-left">
+				<a href="/servicios/" tabindex="0">
+					<h3 class="text-1xl font-semibold">
+						Servicio de mantenimiento
+					</h3>
+					<p>
+						Garantizamos el óptimo funcionamiento y durabilidad de
+						sus instalaciones con un mantenimiento profesional.
+					</p>
+				</a>
+			</div>
+		</div>
+		<div
+			class="bg-gray-100 p-3 rounded-lg shadow-2xl hover:scale-105 transform ease-in-out duration-300"
+		>
+			<Image
+				src="/images/icon1.png"
+				alt="Untitled design"
+				class="md:hidden"
+				width={70}
+				height={70}
+			/>
+			<div class="text-left">
+				<a href="/servicios/" tabindex="0">
+					<h3 class="text-1xl font-semibold">
+						Reformas y construcciones
+					</h3>
+					<p>
+						Transformamos y construimos espacios adaptados a sus
+						necesidades y gustos, con alta calidad.
 					</p>
 				</a>
 			</div>
@@ -64,10 +107,32 @@ import { Image } from "astro:assets";
 			/>
 			<div class="text-left">
 				<a href="/servicios/" tabindex="0">
-					<h3 class="text-1xl font-semibold">Diseño de Exteriores</h3>
+					<h3 class="text-1xl font-semibold">Diseño de interiores</h3>
 					<p>
-						Optimizar los espacios al aire libre, creando entornos
-						armoniosos, atractivos y completamente funcionales.
+						Creamos ambientes interiores funcionales y estéticamente
+						agradables, adaptados a su estilo y preferencias.
+					</p>
+				</a>
+			</div>
+		</div>
+		<div
+			class="bg-gray-100 p-3 rounded-lg shadow-2xl hover:scale-105 transform ease-in-out duration-300"
+		>
+			<Image
+				src="/images/icon1.png"
+				alt="Untitled design"
+				class="md:hidden"
+				width={50}
+				height={50}
+			/>
+			<div class="text-left">
+				<a href="/servicios/" tabindex="0">
+					<h3 class="text-1xl font-semibold">
+						Locales y oficinas
+					</h3>
+					<p>
+						Diseñamos y reformamos locales comerciales y oficinas
+						para optimizar su funcionalidad y atractivo.
 					</p>
 				</a>
 			</div>
