--- a/src/components/Servicios.astro
+++ b/src/components/Servicios.astro
@@ -3,13 +3,14 @@ import Section from "@/components/ui/Section.astro";
 ---
 
 <Section
-	bgColor="bg-gray-200 md:bg-gray-200"
+	bgColor="bg-white"
 	textColor="text-black md:text-black"
 >
+<h2 class="mb-7 md:my-4 text-2xl">NUESTRO COMPROMISO</h2>
 	<div class="text-left">
-		<h1 class="font-bold">
+		<h3 class="font-bold">
 			Más de 20 años siendo tu empresa de obras y servicios.
-		</h1>
+		</h3>
 		<p>
 			Utilizamos productos de primeras marcas y materiales reconocidos en
 			el mercado, garantizando la satisfacción del cliente.
@@ -18,7 +19,7 @@ import Section from "@/components/ui/Section.astro";
 			<strong>Especialización:</strong>
 			<p>
 				Ofrecemos servicios integrales en reforma de viviendas y locales
-			comerciales, incluyendo:
+				comerciales, incluyendo:
 			</p>
 		</p>
 		<ul class="list-disc px-4">
