--- a/src/pages/obras.astro
+++ b/src/pages/obras.astro
@@ -10,7 +10,7 @@ import { Image } from "astro:assets";
 		<h1
 			class="text-primary-500 text-right border-primary-500 border-b font-bold text-3xl"
 		>
-			Descubre como trabajamos
+			Descubreo trabajamos
 		</h1>
 		<nav class="container mx-auto my-10">
 			<ul
