--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,6 @@
 ---
 import { Image } from "astro:assets";
+import Dropdown from "./ui/Dropdown.astro";
 ---
 
 <header class="bg-contrast2  p-4">
@@ -24,5 +25,6 @@ import { Image } from "astro:assets";
 			<li><a href="/nosotros/">Sobre nosotros</a></li>
 			<li><a href="/contacto">Contacto</a></li>
 		</ul>
+		<Dropdown />
 	</nav>
 </header>
