--- a/src/components/Obras.astro
+++ b/src/components/Obras.astro
@@ -6,11 +6,17 @@ import { Image } from "astro:assets";
 	class="bg-gray-200 text-black grid grid-cols-3 grid-rows-3 md:gap-x-0 gap-y-0"
 >
 	<div class="col-span-3 row-span-1 md:p-4 content-center text-center px-4">
-		<h2 class="mb-4 text-2xl">RESIDENCIAL</h2>
+		<h2
+			class="mb-4 text-2xl flex flex-row flex-wrap justify-center items-center"
+		>
+			<span>¿Reforma Integral?</span><span>
+				¿Reformar toda mi vivienda?</span
+			>
+		</h2>
 		<p>
-			¿Cómo imaginas tu casa? ¿Un piso con techos altos y terraza? ¿Una
-			casa con jardín y piscina? Esta es una selección de los hogares que
-			hemos construido.
+			Somos empresa de reformas con una excelente calidad de
+			trabajo, nos esforzamos en ofrecerte el mejor asesoramiento
+			personalizado con un precio calidad muy competitivo.
 		</p>
 	</div>
 	<div
@@ -31,7 +37,7 @@ import { Image } from "astro:assets";
 		<Image
 			loading="eager"
 			src="/images/obras2.webp"
-			alt="imagen del interior de un comedor de oficina, amplio y moderno"
+			alt="imagen del interior de unedor de oficina, amplio y moderno"
 			width="460"
 			height="150"
 			class="rounded-lg md:rounded-none"
