--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ import "@fontsource-variable/karla";
 import { ClientRouter } from "astro:transitions";
 
 import metadata from "../const/meta.json";
-const { mail, address, tel, name } = metadata;
+const { name } = metadata;
 ---
 
 <!doctype html>
@@ -27,5 +27,6 @@ const { mail, address, tel, name } = metadata;
 		<Header />
 		<slot />
 		<Footer />
+		<script src="../../node_modules/flowbite/dist/flowbite.min.js"></script>
 	</body>
 </html>
