--- a/src/layouts/LayoutPages.astro
+++ b/src/layouts/LayoutPages.astro
@@ -25,5 +25,6 @@ const { title, description } = Astro.props;
 			<slot />
 		</PageSection>
 		<Footer />
+		<script src="../../node_modules/flowbite/dist/flowbite.min.js"></script>
 	</body>
 </html>
