--- a/src/components/ui/Dropdown.astro
+++ b/src/components/ui/Dropdown.astro
@@ -1,10 +1,7 @@
 <button
-	id="dropdownDefaultButton"
-	data-dropdown-toggle="dropdown"
 	type="button"
 	id="open-menu-button"
-	data-dropdown-offset-skidding="-50"
-	class="md:hidden -m-2.5 inline-flex cursor-pointer items-center justify-center rounded-md p-2.5 text-white transition-all duration-300 will-change-transform hover:scale-150"
+	class="lg:hidden -m-2.5 inline-flex cursor-pointer items-center justify-center rounded-md p-2.5 text-white transition-all duration-300 will-change-transform hover:scale-150"
 >
 	<span class="sr-only">Abrir Menú Principal</span>
 	<svg
@@ -22,50 +19,128 @@
 			d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"></path>
 	</svg>
 </button>
-
-<!-- Dropdown menu -->
-<div
-	id="dropdown"
-	class="md:hidden z-10 hidden divide-y divide-gray-600 rounded-lg shadow-sm w-44 dark:bg-contrast"
+<dialog
+	class="bg-contrast z-50 w-full max-h-[80vh] max-w-full translate-x-0 transition-discrete duration-300 lg:hidden starting:-translate-x-full [&:not([open])]:-translate-x-full"
+	id="mobile-menu"
+	role="dialog"
+	aria-modal="true"
 >
-	<ul
-		class="py-2 text-sm text-gray-700 dark:text-gray-200"
-		aria-labelledby="dropdownDefaultButton"
-	>
-		<li>
+	<div class="z-10 overflow-y-auto px-6 py-6">
+		<div class="flex items-center justify-between">
+			<div class="flex flex-1">
+				<button
+					type="button"
+					id="close-menu-button"
+					class="-m-2.5 cursor-pointer p-2.5 text-white transition-all duration-300 ease-in will-change-transform hover:scale-150"
+				>
+					<span class="sr-only">Cerrar Menú</span>
+					<svg
+						class="size-6"
+						fill="none"
+						viewBox="0 0 24 24"
+						stroke-width="1.5"
+						stroke="currentColor"
+						aria-hidden="true"
+						data-slot="icon"
+					>
+						<path
+							stroke-linecap="round"
+							stroke-linejoin="round"
+							d="M6 18 18 6M6 6l12 12"></path>
+					</svg>
+				</button>
+			</div>
+		</div>
+		<div class="mt-6 space-y-2">
 			<a
-			data-astro-reload
-				class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-				href="/">Inicio</a
+				href="/"
+				class="hover:text-primary-light border-primary-light -mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white hover:bg-white"
+				>Inicio</a
 			>
-		</li>
-		<li>
 			<a
-			data-astro-reload
-				class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-				href="/servicios/">Servicios</a
+				href="/servicios/"
+				class="hover:text-primary-light border-primary-light -mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white hover:bg-white"
+				>Servicios</a
 			>
-		</li>
-		<li>
 			<a
-			data-astro-reload
-				class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-				href="/obras/">Obras</a
+				href="/obras/"
+				class="hover:text-primary-light border-primary-light -mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white hover:bg-white"
+				>Obras</a
 			>
-		</li>
-		<li>
 			<a
-			data-astro-reload
-				class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-				href="/nosotros/">Sobre nosotros</a
+				href="/nosotros/"
+				class="hover:text-primary-light border-primary-light -mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white hover:bg-white"
+				>Sobre Nosotros</a
 			>
-		</li>
-		<li>
 			<a
-			data-astro-reload
-				class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
-				href="/contacto">Contacto</a
+				href="/contacto"
+				class="hover:text-primary-light border-primary-light -mx-3 block rounded-lg px-3 py-2 text-base/7 font-semibold text-white hover:bg-white"
+				>Contacto</a
 			>
-		</li>
-	</ul>
-</div>
+		</div>
+	</div>
+</dialog>
+
+<div id="backdrop"></div>
+
+<div data-target class="absolute top-[150px]"></div>
+
+<script>
+	const menuButton = document.getElementById(
+		"mobile-menu",
+	) as HTMLDialogElement;
+	const openMenuButton = document.getElementById(
+		"open-menu-button",
+	) as HTMLButtonElement;
+	const closeMenuButton = document.getElementById(
+		"close-menu-button",
+	) as HTMLButtonElement;
+	const backdrop = document.getElementById("backdrop");
+
+	const toggleButton = () => {
+		menuButton.open ? menuButton.close() : menuButton.showModal();
+		if (menuButton.open) {
+			backdrop?.classList.add("visible");
+		} else {
+			backdrop?.classList.remove("visible");
+		}
+	};
+
+	openMenuButton.addEventListener("click", toggleButton);
+	closeMenuButton.addEventListener("click", toggleButton);
+
+	document.addEventListener("click", (event) => {
+		const isClickInsideMenu = menuButton.contains(event.target as Node);
+		const isClickInsideButton = openMenuButton?.contains(
+			event.target as Node,
+		);
+
+		if (isClickInsideMenu && !isClickInsideButton) {
+			menuButton.close();
+			backdrop?.classList.remove("visible");
+		}
+	});
+</script>
+
+<style>
+	#backdrop {
+		position: fixed;
+		top: 0;
+		left: 0;
+		width: 100vw;
+		height: 100vh;
+		background-color: rgba(0, 0, 0, 0.5);
+		opacity: 0;
+		pointer-events: none;
+		transition: opacity 0.3s ease-in-out;
+		z-index: 100;
+	}
+
+	#backdrop.visible {
+		opacity: 1;
+	}
+
+	dialog::backdrop {
+		display: none;
+	}
+</style>
