fix: fix some styles in mobile

--- a/src/pages/contacto.astro
+++ b/src/pages/contacto.astro
@@ -15,14 +15,14 @@ export const prerender = false;
 	<h1
 		class="text-primary-500 text-right border-primary-500 border-b font-bold text-3xl"
 	>
-		Descubre como trabajamos
+		Pregúntanos
 	</h1>
 	<h2 class="text-1xl md:text-2xl font-semibold my-10 text-center">
 		¿Quieres saber más sobre nuestros servicios o necesitas ayuda para tu
 		proyecto? ¡Contáctanos! Estaremos encantados de atenderte y resolver tus
 		dudas.
 	</h2>
-	<div class="flex flex-col my-7">
+	<div class="flex flex-col md:my-7 mb-7">
 		<div class="flex flex-row">
 			<Icon
 				name="mdi:google-maps"
