--- a/src/components/Contacto.astro
+++ b/src/components/Contacto.astro
@@ -9,8 +9,13 @@ const { mail, address, tel, name } = metadata;
 
 <Section bgColor="bg-contrast" textColor="text-white" justify="left">
 	<div class="grid grid-cols-1 grid-rows-1 gap-4">
-			<h2 class="mb-4 text-2xl text-center">CONTACTO</h2>
-			<!-- <LeafMap latitude={41.6102953} longitude={2.5192323} zoom={10} /> -->
+		<h2 class="mb-4 text-2xl text-center">CONTACTO</h2>
+		<!-- <LeafMap latitude={41.6102953} longitude={2.5192323} zoom={10} /> -->
+		<a
+			href="https://www.google.es/maps/place/Carrer+Can+Sau,+12,+08480+L'Ametlla+del+Vall%C3%A8s,+Barcelona/@41.6690923,2.2328632,17z/data=!3m1!4b1!4m5!3m4!1s0x12a4c41a8153e10b:0xf98771b2af313cb0!8m2!3d41.6690923!4d2.2354381?hl=es&entry=ttu&g_ep=EgoyMDI1MDQwOS4wIKXMDSoASAFQAw%3D%3D"
+			target="_blank"
+			rel="noopener noreferrer"
+		>
 			<Image
 				src="/images/map.webp"
 				alt="mapa de ubicacion"
@@ -18,6 +23,7 @@ const { mail, address, tel, name } = metadata;
 				height={160}
 				class="rounded-lg"
 			/>
+		</a>
 		<div class="flex flex-col">
 			<div class="flex flex-row items-center justify-start">
 				<div class="inline-block mr-4">
@@ -32,8 +38,7 @@ const { mail, address, tel, name } = metadata;
 						class="text-primary-600"
 					/>
 				</div>
-				<a
-					href=`mailto:${mail}?Subject='Interesado%20en%20contratar'`
+				<a href=`mailto:${mail}?Subject='Interesado%20en%20contratar'`
 					>{mail}</a
 				>
 			</div>
